--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,11 @@
   font-size: 16px;
   cursor: pointer;
 }
+
+.error {
+  color: red;
+
+  /* deixa o texto a esquerda */
+  align-self: flex-start;
+  margin-bottom: 14px;
+}
